--- a/lab11_final/config-server/src/main/resources/application.properties
+++ b/lab11_final/config-server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8070
 #spring.cloud.config.server.native.search-locations=classpath:/config
 
 spring.profiles.active=git
-spring.cloud.config.server.git.uri=https://github.com/tiulia/config_files.git
+spring.cloud.config.server.git.uri=https://github.com/Talida-M/config_files.git
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
 
