--- a/lab11_final/discount/pom.xml
+++ b/lab11_final/discount/pom.xml
@@ -47,6 +47,18 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations-jakarta</artifactId>
+            <version>2.2.19</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-models-jakarta</artifactId>
+			<version>2.2.19</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 	<dependencyManagement>
